# pico-w-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  SETUP.md  compile.sh  flash.sh  todo.md
main/: CMakeLists.txt  backup_wifi_scan.c  backup_wifi_scan_and_connect.c  lwipopts.h  main.c
